--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -60,10 +60,10 @@
   }
 
   .data {
-    color: #83cc00;
+    color: #1cccae;
 
     i {
-      color: #83cc00 !important;
+      color: #1cccae !important;
     }
   }
 
