--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -32,7 +32,7 @@
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
 	<!--<script src="{{asset "/js/tags.js"}}"></script>-->
-	<script src="{{asset "/js/includes/previews.js"}}"></script>
+	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 
 
 
