--- a/author.hbs
+++ b/author.hbs
@@ -21,7 +21,7 @@
 
 <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.0/stitch.js"></script>
 <script>
-  const client = stitch.Stitch.initializeDefaultAppClient('authors-gwezt');
+  const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
 
   const db = client.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('authors');
 
