--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -17,12 +17,12 @@
     <div class="cards"></div>
   </div>
 </div>
-<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.0/stitch.js"></script>
+<script src="{{asset "/js/includes/stitch.min.js"}}"></script>
 <script>
 
-  function populateCards(cards, status) {
+  function populateCards(cards) {
     for (var i = 0; i < cards.length; i++) {
-      $('#' + status + ' .cards').append('<div class="card"> \n' +
+      $('#' + cards[i]['status'] + ' .cards').append('<div class="card"> \n' +
         '<h5>' + cards[i].summary + '</h5> \n' +
         '<p>' + cards[i].description + '</p> \n' +
         '<div style="background-color:' + cards[i].issuetype_color + ';" class="issuetype ' + cards[i].issuetype + '"><img src="' + cards[i].issuetype_url + '"></div> \n' +
@@ -40,24 +40,27 @@
 
   const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
   const db = client.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('authors');
-  
+
   client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>
-    db.collection('hackersandslackers').find({status: 'Backlog', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}, priority: { $in: ['Highest', 'High', 'Medium']}}).limit(7).sort({ updated: -1 }).execute()
-  ).then(docs => {
-    populateCards(docs, 'backlog')
-  }).then(() =>
-    db.collection('hackersandslackers').find({status: 'To Do', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug', 'Data']}}).limit(7).sort({ updated: -1 }).execute()
-  ).then(docs => {
-    populateCards(docs, 'todo')
-  }).then(() =>
-    db.collection('hackersandslackers').find({status: 'In Progress', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug', 'Content', 'Data']}}).limit(7).sort({ updated: -1 }).execute()
-  ).then(docs => {
-    populateCards(docs, 'progress')
-  }).then(() =>
-    db.collection('hackersandslackers').find({status: 'Done', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}}).limit(7).sort({ updated: -1 }).execute()
-  ).then(docs => {
-    populateCards(docs, 'done')
-  }).catch(err => {
+    db.collection('hackersandslackers').find({status: 'Backlog', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}, priority: { $in: ['Highest', 'High', 'Medium']}}), {
+    limit: 7,
+    sort: { "updated": -1 }
+  }).asArray().then(populateCards)
+/*
+    db.collection('hackersandslackers').find({status: 'To Do', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug', 'Data']}}, {
+    limit: 7,
+    sort: { "updated": -1 }
+  }).asArray().then(populateCards);
+
+    db.collection('hackersandslackers').find({status: 'In Progress', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug', 'Content', 'Data']}}, {
+      limit: 7,
+      sort: { "updated": -1 }
+  }).asArray().then(populateCards);
+
+    db.collection('hackersandslackers').find({status: 'Done', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}}, {
+      limit: 7,
+      sort: { "updated": -1 }
+  }).asArray().then(populateCards);
     console.error(err)
-  });
+  );*/
 </script>
