--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -20,7 +20,9 @@
 <script src="{{asset "/js/includes/stitch.min.js"}}"></script>
 <script>
 
-  function populateCards(cards) {
+const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
+client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>{
+    var cards = client.callFunction('populateCards');
     for (var i = 0; i < cards.length; i++) {
       $('#' + cards[i]['status'] + ' .cards').append('<div class="card"> \n' +
         '<h5>' + cards[i].summary + '</h5> \n' +
@@ -35,17 +37,15 @@
         '</div> \n' +
       '</div>');
     }
+  });
     $('#' + status).append('<span class="count">' + cards.length + ' issues total</span>');
-  }
 
-  const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
-  const db = client.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('authors');
-
+/*
   client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>
     db.collection('hackersandslackers').find({status: 'Backlog', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}, priority: { $in: ['Highest', 'High', 'Medium']}}), {
     limit: 7,
     sort: { "updated": -1 }
-  }).asArray().then(populateCards)
+  }).asArray().then(populateCards)*/
 /*
     db.collection('hackersandslackers').find({status: 'To Do', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug', 'Data']}}, {
     limit: 7,
