--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -22,23 +22,25 @@
 
 const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
 client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>{
-    var cards = client.callFunction('populateCards');
+    var cards = client.callFunction('populateCards', 'Backlog');
     for (var i = 0; i < cards.length; i++) {
-      $('#' + cards[i]['status'] + ' .cards').append('<div class="card"> \n' +
-        '<h5>' + cards[i].summary + '</h5> \n' +
-        '<p>' + cards[i].description + '</p> \n' +
-        '<div style="background-color:' + cards[i].issuetype_color + ';" class="issuetype ' + cards[i].issuetype + '"><img src="' + cards[i].issuetype_url + '"></div> \n' +
+      var card = JSON.parse(cards[i])
+      $('#' + card['status'] + ' .cards').append('<div class="card"> \n' +
+        '<h5>' + card.summary + '</h5> \n' +
+        '<p>' + card.description + '</p> \n' +
+        '<div style="background-color:' + card.issuetype_color + ';" class="issuetype ' + card.issuetype + '"><img src="' + card.issuetype_url + '"></div> \n' +
         '<div class="info"> \n' +
           '<div class="left"> \n' +
             '<div class="avatar"><img src="https://www.gravatar.com/avatar/9eb3868db428fb602e03b3059608199b?s=250&d=mm&r=x"></div> \n' +
-            '<div class="priority ' + cards[i].priority + '"><i class="fas fa-arrow-up"></i></div> \n' +
+            '<div class="priority ' + card.priority + '"><i class="fas fa-arrow-up"></i></div> \n' +
           '</div> \n' +
-          '<div class="epic ' + cards[i].epic_name + '"><i class="fas fa-bolt" style=color:' + cards[i].epic_color + ';"></i> <span>' + cards[i].epic_name + '</span></div> \n' +
+          '<div class="epic ' + card.epic_name + '"><i class="fas fa-bolt" style=color:' + card.epic_color + ';"></i> <span>' + card.epic_name + '</span></div> \n' +
         '</div> \n' +
       '</div>');
     }
-  });
     $('#' + status).append('<span class="count">' + cards.length + ' issues total</span>');
+  });
+
 
 /*
   client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>
