--- a/partials/postheader.hbs
+++ b/partials/postheader.hbs
@@ -1,11 +1,16 @@
 <!-- start header -->
-<header class="post-header">
+<header class="post-header" style="overflow:hidden">
 	<!-- start logo -->
 	<a class="mobile-branding" href="{{@blog.url}}"><img src="https://hackers.nyc3.digitaloceanspaces.com/logowhite.png"></a>
 	<!-- start navigation -->
 	<nav class="post-navigation">
-			{{! insert navigation partial}}
-			{{navigation}}
+		<!--<div class="hamburger hamburger--vortex js-hamburger">
+        <div class="hamburger-box">
+          <div class="hamburger-inner"></div>
+        </div>
+      </div>-->
+{{! insert navigation partial}}
+		{{navigation}}
 	</nav>
 </header>
 <!-- end header -->
