--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -24,9 +24,23 @@
 @import 'githubcard.less';
 @import 'kanban.less';
 @import 'code.less';
+@import 'hamburgers.less';
+
 /*====================================================
 	fonts
 ====================================================*/
+@font-face {
+font-family: "Font Awesome 5 Pro";
+font-weight: normal;
+font-style : normal;
+       src : url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.eot?v=5.1.1");
+       src : url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.eot?#iefix&v=5.1.1") format("embedded-opentype"),
+             url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.woff2?v=5.1.1") format("woff2"),
+             url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.woff?v=5.1.1") format("woff"),
+             url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.ttf?v=5.1.1") format("truetype"),
+             url("https://maxcdn.bootstrapcdn.com/font-awesome/5.1.1/fonts/fontawesome-webfont.svg?v=5.1.1#fontawesomeregular") format("svg");
+}
+
 @font-face {
 	font-family: 'akzidenz';
 	src: url("../fonts/akzidenzgrotesk-bq-light-regular.otf") format("opentype");
