potential mongodb stitch fix

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -8,6 +8,7 @@
   {{#if feature_image}}
     <div class="featured-media">
       <a href="{{url}}"><img src="{{feature_image}}" alt="{{{title}}}"></a>
+      {{!-- div class="postimage" style="background:url({{feature_image}});" alt="{{{title}}}"></div> --}}
     </div>
   {{/if}}
 
