--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -13,6 +13,14 @@
 		margin: auto;
 	}
 
+	.postimage {
+		height: 415px;
+		background-size: cover;
+		width: 100%;
+		background-position-y: center;
+		background-position-x: center;
+	}
+
 	.post-head {
 		margin: 10px 0 20px;
 
