--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -14,6 +14,8 @@
 			display: inline-block;
 			margin: 0 10px 10px 0;
 			border-radius: 2px;
+			font-size: 13px;
+			
 			.transition(all 0.2s ease);
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
