--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -64,7 +64,7 @@ font-style : normal;
 /*====================================================
 	about author and comment and next-prev link
 ====================================================*/
-.page-about {
+.page-template-about {
 	.about-author {
 		border: 1px solid #dcdcdc;
 		border-radius: 4px !important;
@@ -250,7 +250,7 @@ p {
 	padding-top: 56% !important;
 }
 
-.page {
+.page-template {
 	margin-bottom: 0;
 
 	iframe {
@@ -287,7 +287,7 @@ p {
 	}
 }
 
-.page-template,
+.page-template-template,
 .post-template {
 	.mobile-branding {
 		@media(max-width: 800px) {
