--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -27,11 +27,10 @@
 	{{ghost_foot}}
 	<!-- scripts -->
   <!--<script src="{{asset "/js/includes/jquery.min.js"}}"></script>-->
-	<script src="{{asset "/js/includes/jquery.fitvids.js"}}"></script>
+	  <!--<script src="{{asset "/js/includes/jquery.fitvids.js"}}"></script>-->
 		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>-->
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
-	<!--<script src="{{asset "/js/tags.js"}}"></script>-->
 	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 
 
