--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -23,20 +23,21 @@ const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
 client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>{
     client.callFunction("populateCards", "Backlog").then((documents) => {
         documents.forEach((document) => function(document){
-          $('#' + document['status'] + ' .cards').append('<div class="card"> \n' +
-            '<h5>' + document.summary + '</h5> \n' +
-            '<p>' + document.description + '</p> \n' +
-            '<div style="background-color:' + document.issuetype_color + ';" class="issuetype ' + document.issuetype + '"><img src="' + document.issuetype_url + '"></div> \n' +
+          var card = EJSON.parse(document);
+          $('#' + card.status + ' .cards').append('<div class="card"> \n' +
+            '<h5>' + card.summary + '</h5> \n' +
+            '<p>' + card.description + '</p> \n' +
+            '<div style="background-color:' + card.issuetype_color + ';" class="issuetype ' + card.issuetype + '"><img src="' + card.issuetype_url + '"></div> \n' +
             '<div class="info"> \n' +
               '<div class="left"> \n' +
                 '<div class="avatar"><img src="https://www.gravatar.com/avatar/9eb3868db428fb602e03b3059608199b?s=250&d=mm&r=x"></div> \n' +
-                '<div class="priority ' + document.priority + '"><i class="fas fa-arrow-up"></i></div> \n' +
+                '<div class="priority ' + card.priority + '"><i class="fas fa-arrow-up"></i></div> \n' +
               '</div> \n' +
-              '<div class="epic ' + document.epic_name + '"><i class="fas fa-bolt" style=color:' + document.epic_color + ';"></i> <span>' + document.epic_name + '</span></div> \n' +
+              '<div class="epic ' + card.epic_name + '"><i class="fas fa-bolt" style=color:' + card.epic_color + ';"></i> <span>' + card.epic_name + '</span></div> \n' +
             '</div> \n' +
           '</div>');
         });
-        $('#' + status).append('<span class="count">' + document.length + ' issues total</span>');
+        $('#' + status).append('<span class="count">' + card.length + ' issues total</span>');
         });
     });
 
