--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -17,53 +17,11 @@
     <div class="cards"></div>
   </div>
 </div>
+<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.0/stitch.js"></script>
 <script>
+  const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
 
-const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
-client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>{
-    client.callFunction("populateCards", "Backlog").then(docs => {
-      console.log(documents)
-        /*documents.forEach((document) => function(document){
-          var card = EJSON.parse(document);
-          $('#' + card.status + ' .cards').append('<div class="card"> \n' +
-            '<h5>' + card.summary + '</h5> \n' +
-            '<p>' + card.description + '</p> \n' +
-            '<div style="background-color:' + card.issuetype_color + ';" class="issuetype ' + card.issuetype + '"><img src="' + card.issuetype_url + '"></div> \n' +
-            '<div class="info"> \n' +
-              '<div class="left"> \n' +
-                '<div class="avatar"><img src="https://www.gravatar.com/avatar/9eb3868db428fb602e03b3059608199b?s=250&d=mm&r=x"></div> \n' +
-                '<div class="priority ' + card.priority + '"><i class="fas fa-arrow-up"></i></div> \n' +
-              '</div> \n' +
-              '<div class="epic ' + card.epic_name + '"><i class="fas fa-bolt" style=color:' + card.epic_color + ';"></i> <span>' + card.epic_name + '</span></div> \n' +
-            '</div> \n' +
-          '</div>');
-        });
-        $('#' + status).append('<span class="count">' + card.length + ' issues total</span>');*/
-        });
-    });
-
-
-/*
   client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>
-    db.collection('hackersandslackers').find({status: 'Backlog', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}, priority: { $in: ['Highest', 'High', 'Medium']}}), {
-    limit: 7,
-    sort: { "updated": -1 }
-  }).asArray().then(populateCards)*/
-/*
-    db.collection('hackersandslackers').find({status: 'To Do', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug', 'Data']}}, {
-    limit: 7,
-    sort: { "updated": -1 }
-  }).asArray().then(populateCards);
-
-    db.collection('hackersandslackers').find({status: 'In Progress', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug', 'Content', 'Data']}}, {
-      limit: 7,
-      sort: { "updated": -1 }
-  }).asArray().then(populateCards);
-
-    db.collection('hackersandslackers').find({status: 'Done', issuetype: { $in: ['Task', 'Story', 'Integrations', 'Bug']}}, {
-      limit: 7,
-      sort: { "updated": -1 }
-  }).asArray().then(populateCards);
-    console.error(err)
-  );*/
+    client.callFunction("populateCards", "Backlog").then(
+      console.log(JSON.stringify(result))));
 </script>
