--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -85,15 +85,16 @@
 		}
 
 		a {
-			border: 1px solid #e6e6e6;
-			padding: 3px 11px;
-			color: #627e90;
+			border: 0;
+			padding: 5px 11px;
+			color: #a1a7ab;
 			line-height: 1.5em;
 			display: inline-block;
 			border-radius: 2px;
 			.transition(all 0.2s ease);
 			font-size: .9em;
 			margin: 5px 10px 5px 0;
+			background: #f9f9f9;
 
 
 			&:hover {
