--- a/src/less/code.less
+++ b/src/less/code.less
@@ -13,6 +13,7 @@ pre {
 
 code{
   margin:0;
+      font-size: 1.3em;
 }
 
 
@@ -25,7 +26,7 @@ code{
   background: #f1f5f8;
   overflow-wrap: break-word;
   margin:0;
-  
+
 }
 
 code  {
@@ -35,13 +36,11 @@ code  {
   color: #2e9eb7;
   border-radius: 4px;
   margin: 0 5px;
-  font-style: italic;
 }
 
 .hljs-comment,
 .hljs-quote {
   color: #b5bac4;
-  font-style: italic;
 }
 
 .hljs-doctag,
@@ -94,10 +93,6 @@ code  {
 .hljs-selector-id,
 .hljs-title {
   color: #61aeee;
-}
-
-.hljs-emphasis {
-  font-style: italic;
 }
 
 .hljs-strong {
