post header nav desktop

--- a/partials/postheader.hbs
+++ b/partials/postheader.hbs
@@ -1,6 +1,7 @@
 <!-- start header -->
 <header class="post-header" style="overflow:hidden">
 	<!-- start logo -->
+	<a class="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}"></a>
 	<a class="mobile-branding" href="{{@blog.url}}"><img src="https://hackers.nyc3.digitaloceanspaces.com/logowhite.png"></a>
 	<!-- start navigation -->
 	<nav class="post-navigation">
