--- a/src/less/code.less
+++ b/src/less/code.less
@@ -26,7 +26,11 @@ code{
   background: #f1f5f8;
   overflow-wrap: break-word;
   margin:0;
+  font-size: 1.3em;
 
+  @media(max-width: 600px) {
+    font-size: .9em;
+  }
 }
 
 code  {
