post preview bug

--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -215,6 +215,14 @@
 
 
 	.post-content {
+
+		*{
+			display: none;
+		}
+
+		p, a {
+			display: inline !important;
+		}
 		line-height: 1.5;
 		margin: 0 0 20px;
 
