--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -23,7 +23,7 @@
 const client = stitch.Stitch.initializeDefaultAppClient('hackerjira-bzmfe');
 client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>{
     client.callFunction("populateCards", "Backlog").then((documents) => {
-        documents.forEach((document) => function(document){
+        documents.forEach((document) => function(JSON.stringify(document)){
           $('#' + document['status'] + ' .cards').append('<div class="card"> \n' +
             '<h5>' + document.summary + '</h5> \n' +
             '<p>' + document.description + '</p> \n' +
