fixed previews from ghost update

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -608,6 +608,7 @@
 			display: block;
 			margin: 0 auto !important;
 			height:fit-content;
+			margin-bottom: 20px;
 
 			&.instagram-media {
 				max-width: 400px !important;
