--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -87,14 +87,14 @@
 		a {
 			border: 0;
 			padding: 5px 11px;
-			color: #a1a7ab;
+			color: #7794a7;
 			line-height: 1.5em;
 			display: inline-block;
 			border-radius: 2px;
 			.transition(all 0.2s ease);
 			font-size: .9em;
 			margin: 5px 10px 5px 0;
-			background: #f9f9f9;
+			background: #f2f3f5;
 
 
 			&:hover {
