--- a/partials/postheader.hbs
+++ b/partials/postheader.hbs
@@ -1,19 +1,14 @@
 <!-- start header -->
 <header class="post-header" style="overflow:hidden">
 	<!-- start logo -->
-	<a class="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}"></a>
-	<a class="mobile-branding" href="{{@blog.url}}"><img src="https://hackers.nyc3.digitaloceanspaces.com/logowhite.png"></a>
-	<!-- start navigation -->
-	<nav class="post-navigation">
-		<!--<div class="hamburger hamburger--vortex js-hamburger">
-        <div class="hamburger-box">
-          <div class="hamburger-inner"></div>
-        </div>
-      </div>-->
-{{! insert navigation partial}}
-		{{navigation}}
-	</nav>
+	<div class="navcontain">
+		<a class="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}"></a>
+		<a class="mobile-branding" href="{{@blog.url}}"><img src="https://hackers.nyc3.digitaloceanspaces.com/logowhite.png"></a>
+		<!-- start navigation -->
+		<nav class="post-navigation">
+			{{navigation}}
+		</nav>
+</div>
+	<!-- end navigation -->
 </header>
 <!-- end header -->
-
-<!-- end navigation -->
