--- a/src/less/post.less
+++ b/src/less/post.less
@@ -203,7 +203,7 @@
 		border-bottom: 0;
     border-top: 0;
     padding: 10px 20px;
-    background: #f1f4f7;
+    background: #e7f1ed;
     border-left: 5px solid #26ae60;
     margin: 30px 80px;
     width: auto;
@@ -606,19 +606,19 @@
 		iframe {
 			margin: 0;
 			display: block;
-			margin: 0 auto !important;
-			height:fit-content;
+			margin: 0 auto 30px!important;
+			height:400px;
 			margin-bottom: 20px;
 
 			&.instagram-media {
 				max-width: 400px !important;
 			}
 
-			@media(max-width: 600px) {
+			@media(max-width: 800px) {
 				margin-left: calc(~"-50vw + 50%") !important;
 				margin-right: calc(~"-50vw + 50%") !important;
-		    height: 300px;
-		    width: 115%;
+				height: 228px;
+				width: 120%;
 			}
 		}
 
