--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -2,17 +2,12 @@
 @import "mixin.less";
 
 .post-header {
-  max-width: 1000px;
   margin: auto;
   position: relative;
   width: auto;
   padding: 0;
   background: @theme-color;
   z-index: 100;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 30px;
   box-shadow: 0 0 5pc #083880;
 
   @media(max-width: 800px) {
@@ -23,6 +18,19 @@
     background: @theme-color !important;
     height: 59px;
     box-shadow: 0px 0px 5pc #083880;
+  }
+
+  .navcontain {
+    max-width:1000px;
+    margin:auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+
+    @media(max-width: 800px) {
+      padding:0;
+    }
   }
 
   .logo {
@@ -63,6 +71,36 @@
       justify-content: space-between;
       margin: 0;
       list-style: none;
+
+      li::before {
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        color:white;
+        font-size: 12px;
+        margin-right: 8px;
+      }
+
+      .nav-about::before {
+        font-family: "Font Awesome 5 Pro";
+        font-weight: 900;
+        content: "\f129";
+      }
+
+      .nav-projects::before {
+        font-family: "Font Awesome 5 Pro";
+        font-weight: 400;
+        content: "\f120";
+      }
+
+      .nav-series::before {
+        font-family: "Font Awesome 5 Pro";
+        content: "\f15b";
+      }
+
+
       @media(max-width: 600px) {
         width: 270px;
         overflow: hidden;
@@ -77,33 +115,7 @@
           }
         }
 
-        li::before {
-          display: inline-block;
-          font-style: normal;
-          font-variant: normal;
-          text-rendering: auto;
-          -webkit-font-smoothing: antialiased;
-          color:white;
-          font-size: 12px;
-          margin-right: 8px;
-        }
 
-        .nav-about::before {
-          font-family: "Font Awesome 5 Pro";
-          font-weight: 900;
-          content: "\f129";
-        }
-
-        .nav-projects::before {
-          font-family: "Font Awesome 5 Pro";
-          font-weight: 400;
-          content: "\f120";
-        }
-
-        .nav-series::before {
-          font-family: "Font Awesome 5 Pro";
-          content: "\f15b";
-        }
       }
 
       li {
