--- a/src/less/post.less
+++ b/src/less/post.less
@@ -293,7 +293,7 @@
 
 			td,
 			th {
-				padding: 7px 20px;
+				padding: 7px 5px;
 				text-align: center;
 				@media(max-width: 800px) {
 					padding: 7px 0;
@@ -304,12 +304,19 @@
 				background: #f4f8fd;
 			}
 
+			td {
+				border-style: none;
+				border-right: 1px solid #c9dada;
+				border-left: 0;
+			}
+
 			th {
 				background: #94b6c1;
 				font-weight: 500;
 				text-transform: uppercase;
 				color: white;
 				font-size: 16px;
+				border-style: none;
 
 				@media(max-width: 600px){
 					font-size: 14px;
