post mobile styles

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -54,7 +54,7 @@ code{
 
   @media(max-width: 600px) {
     font-size: 1.1em;
-    padding: 0;
+    padding: 15px;
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
 
