--- a/src/less/post.less
+++ b/src/less/post.less
@@ -308,6 +308,7 @@
 				border-style: none;
 				border-right: 1px solid #c9dada;
 				border-left: 0;
+				line-height: 1.3;
 			}
 
 			th {
@@ -421,7 +422,7 @@
 	figcaption {
 		text-align: center;
 		margin: -10px auto 40px;
-		font-size: 12px;
+		font-size: 15px;
 		color: #8c8c8c;
 		white-space: nowrap;
 
