--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -23,7 +23,7 @@
   const db = client.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('jira');
 
 
-client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>{
+client.authenticate("anon").then(user =>{
     client.callFunction("populateCards", ["Backlog"]).then( result =>
         result.forEach((document) => {
           $('#' + document['status'] + ' .cards').append('<div class="card"> \n' +
@@ -38,8 +38,9 @@ client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user =>{
               '<div class="epic ' + document.epic_name + '"><i class="fas fa-bolt" style=color:' + document.epic_color + ';"></i> <span>' + document.epic_name + '</span></div> \n' +
             '</div> \n' +
           '</div>');
+          console.log(document);
         })
-        //$('#' + status).append('<span class="count">' + document.length + ' issues total</span>');
+        $('#' + status).append('<span class="count">' + document.length + ' issues total</span>');
         );
     });
 </script>
