--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -38,8 +38,8 @@ client.authenticate("anon").then(user =>{
               '<div class="epic ' + document.epic_name + '"><i class="fas fa-bolt" style=color:' + document.epic_color + ';"></i> <span>' + document.epic_name + '</span></div> \n' +
             '</div> \n' +
           '</div>');
-          console.log(document);
         })
+        console.log(result);
         $('#' + status).append('<span class="count">' + document.length + ' issues total</span>');
         );
     });
