--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -39,7 +39,7 @@ client.authenticate("anon").then(user =>{
             '</div> \n' +
           '</div>');
         })
-        console.log(result);
-        $('#' + status).append('<span class="count">' + document.length + ' issues total</span>');
-      )});
+      ).then( result =>
+
+      });
 </script>
