--- a/src/less/post.less
+++ b/src/less/post.less
@@ -102,6 +102,13 @@
 		font-size: 1.1em;
 	}
 
+	.post-content > div {
+		@media(max-width: 600px){
+			margin-left: calc(~"-50vw + 50%") !important;
+	    margin-right: calc(~"-50vw + 50%") !important;
+		}
+	}
+
 	.main-header,
 	.main-navigation,
 	.sidebar {
