--- a/src/less/code.less
+++ b/src/less/code.less
@@ -11,7 +11,7 @@ pre {
   }
 }
 
-code,
+pre > code,
 &post-content > .hljs {
   background: #f1f5f8 !important;
   white-space: pre-wrap;
@@ -54,7 +54,7 @@ code{
 
   @media(max-width: 600px) {
     font-size: 1.1em;
-    padding: 15px;
+    padding: 20px;
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
 
