--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -40,6 +40,6 @@ client.authenticate("anon").then(user =>{
           '</div>');
         })
       ).then( result =>
-
-      });
-</script>
+        console.log(result);
+      }));
+</script>ss
