--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -41,5 +41,6 @@ client.authenticate("anon").then(user =>{
         })
       ).then( result =>
         console.log(result);
-      }));
-</script>ss
+      )});
+
+</script>
