--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -23,24 +23,25 @@
   const db = client.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('jira');
 
 
-client.authenticate("anon").then(user =>{
-    client.callFunction("populateCards", ["Backlog"]).then( result =>
-        result.forEach((document) => {
-          $('#' + document['status'] + ' .cards').append('<div class="card"> \n' +
-            '<h5>' + document.summary + '</h5> \n' +
-            '<p>' + document.description + '</p> \n' +
-            '<div style="background-color:' + document.issuetype_color + ';" class="issuetype ' + document.issuetype + '"><img src="' + document.issuetype_url + '"></div> \n' +
-            '<div class="info"> \n' +
-              '<div class="left"> \n' +
-                '<div class="avatar"><img src="https://www.gravatar.com/avatar/9eb3868db428fb602e03b3059608199b?s=250&d=mm&r=x"></div> \n' +
-                '<div class="priority ' + document.priority + '"><i class="fas fa-arrow-up"></i></div> \n' +
-              '</div> \n' +
-              '<div class="epic ' + document.epic_name + '"><i class="fas fa-bolt" style=color:' + document.epic_color + ';"></i> <span>' + document.epic_name + '</span></div> \n' +
-            '</div> \n' +
+  client.authenticate("anon").then(user => {
+    client.callFunction("populateCards", ["Backlog"]).then(result => {
+      result.forEach((document) => {
+        $('#' + document['status'] + ' .cards').append('<div class="card"> \n' +
+          '<h5>' + document.summary + '</h5> \n' +
+          '<p>' + document.description + '</p> \n' +
+          '<div style="background-color:' + document.issuetype_color + ';" class="issuetype ' + document.issuetype + '"><img src="' + document.issuetype_url + '"></div> \n' +
+          '<div class="info"> \n' +
+          '<div class="left"> \n' +
+          '<div class="avatar"><img src="https://www.gravatar.com/avatar/9eb3868db428fb602e03b3059608199b?s=250&d=mm&r=x"></div> \n' +
+          '<div class="priority ' + document.priority + '"><i class="fas fa-arrow-up"></i></div> \n' +
+          '</div> \n' +
+          '<div class="epic ' + document.epic_name + '"><i class="fas fa-bolt" style=color:' + document.epic_color + ';"></i> <span>' + document.epic_name + '</span></div> \n' +
+          '</div> \n' +
           '</div>');
-        })
-      ).then( result =>
-        console.log(result);
-      )});
-
+      })
+    ).then(result => {
+      console.log(result);
+    })
+  }
+});
 </script>
