--- a/src/less/post.less
+++ b/src/less/post.less
@@ -295,6 +295,10 @@
 			th {
 				padding: 7px 20px;
 				text-align: center;
+				max-width: 100px;
+				word-wrap: break-word;
+				padding: 10px;
+				border-right: 1px solid #e6e9f0;
 				@media(max-width: 800px) {
 					padding: 7px 0;
 				}
