--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -24,7 +24,7 @@
 @import 'githubcard.less';
 @import 'kanban.less';
 @import 'code.less';
-@import 'hamburgers.less';
+@import 'social.less';
 
 /*====================================================
 	fonts
