--- a/partials/widget-social.hbs
+++ b/partials/widget-social.hbs
@@ -1,30 +1,40 @@
 <!-- start widget -->
-<div class="widget">
+<!--<div class="widget">
 	<h4 class="title">{{t "Follow"}}</h4>
 	<div class="content">
-		<ul class="social">
-			<!-- start social links -->
-			<!-- replace the # with your own profile link address -->
-			<li><a href="https://hackingandslacking.com"><i class="fab fa-medium-m"></i></a></li>
-			<li><a href="https://twitter.com/hackersslackers"><i class="fab fa-twitter"></i></a></li>
-			<li><a href="https://www.facebook.com/hackersandslackers/"><i class="fab fa-facebook-f"></i></a></li>
-			<!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
-			<!--<li><a href="#"><i class="fa fa-skype"></i></a></li>
-			<li><a href="#"><i class="fa  fa-pinterest"></i></a></li>
-			<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-			<li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
-			<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
-			<li><a href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a></li>
-			<li><a href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a></li>
-			<!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
-			<!--<li><a href="#"><i class="fab fa-stack-overflow"></i></a></li>-->
-			<!--<li><a href="#"><i class="fa fa-stack-exchange"></i></a></li>
+		<ul class="social">-->
+<!-- start social links -->
+<!-- replace the # with your own profile link address -->
+<!-- <li><a href="https://hackingandslacking.com"><i class="fab fa-medium-m"></i></a></li>-->
+<!-- <li><a href="https://twitter.com/hackersslackers"><i class="fab fa-twitter"></i></a></li>-->
+<!-- <li><a href="https://www.facebook.com/hackersandslackers/"><i class="fab fa-facebook-f"></i></a></li>-->
+<!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
+<!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
+<!--<li><a href="#"><i class="fa  fa-pinterest"></i></a></li>-->
+<!--<li><a href="#"><i class="fa fa-youtube"></i></a></li>-->
+<!--<li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>-->
+<!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
+<!--<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
+<!-- <li><a href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a></li>-->
+<!-- <li><a href="https://github.com/hackersandslackers"><i class="fab fa-github"></i></a></li>-->
+<!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
+<!--<li><a href="#"><i class="fab fa-stack-overflow"></i></a></li>-->
+<!--<li><a href="#"><i class="fa fa-stack-exchange"></i></a></li>
 			<li><a href="#"><i class="fa fa-xing"></i></a></li>-->
-			<!--<li><a href="#"><i class="fa fa-envelope"></i></a></li>-->
-			<li><a href="{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a></li>
-			<!-- end social links -->
-		</ul>
+<!--<li><a href="#"><i class="fa fa-envelope"></i></a></li>-->
+<!--<li><a href="{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a></li>-->
+<!-- end social links -->
+<!--</ul>
+	</div>
+</div>-->
+<!-- end widget -->
+<div class="widget">
+	<div class="social-btns">
+		<a class="btn medium" href="#"><i class="fa fa-medium"></i></a>
+		<a class="btn facebook" href="#"><i class="fa fa-facebook"></i></a>
+		<a class="btn twitter" href="#"><i class="fa fa-twitter"></i></a>
+		<a class="btn google" href="#"><i class="fa fa-google"></i></a>
+		<aclass="btn github" href="#"><i class="fa fa-github"></i></a>
+		<a class="btn rss" href="#"><i class="fa fa-rss"></i></a>
 	</div>
 </div>
-<!-- end widget -->
