--- a/partials/footer (Todd Birchard's conflicted copy 2018-07-27).hbs
+++ b/partials/footer (Todd Birchard's conflicted copy 2018-07-27).hbs
@@ -28,10 +28,8 @@
 	<!-- scripts -->
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
-	
+	<script src="{{asset "/js/includes/materialize.min.js"}}"></script>
 	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
-
-
 
 </body>
 </html>
