--- a/partials/post_footer (Todd Birchard's conflicted copy 2018-07-27).hbs
+++ b/partials/post_footer (Todd Birchard's conflicted copy 2018-07-27).hbs
@@ -28,11 +28,10 @@
 	<!-- scripts -->
 
 
-	<script src="{{asset "/js/includes/jquery.fitvids.js"}}"></script>
+	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
+	<script src="{{asset "/js/includes/materialize.min.js"}}"></script>
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-
 	{{!--{{#has author="Matthew Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}--}}
 	{{> analytics}}
 </body>
